# sheetcloud

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build_and_deploy_docs.yml  continuous_integration.yml  deploy_to_pypi.yml
examples/: exm1.py
resources/: endpoints.v1.json  template_red_sailfish.json
sheetcloud/: __init__.py  conn.py  drive.py  env.py  formats.py  fun.py  orm.py  sheets.py  templates.py  user.py  utils.py
tests/: test_conn.py  test_orm.py
