[metadata]
name = sheetcloud
version = 0.1.0
author = sheetcloud.org
author_email = contact@sheetcloud.org
description = Sheetcloud.de | Turn Spreadsheets into a Cloud Database | Account required
long_description = file: README.md
long_description_content_type = text/markdown
url = https://sheetcloud.org
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Database
    Topic :: Office/Business :: Financial :: Spreadsheet
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True